# ohrwurm

./: .dockerignore  .drone.yml  .env_example  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  docker-compose.yml  renovate.json
.gitea/workflows/: cd.yaml  ci.yml  deploy.yaml  release.yaml  renovate.yaml  rust.yml
.github/workflows/: ci.yml  deploy.yaml  rust.yml
migrations/: 20240620151940_init.sql
src/: colors.rs  handler.rs  interaction_commands.rs  main.rs  metadata.rs  signal.rs  state.rs  utils.rs
src/commands/: delete.rs  join.rs  leave.rs  loop_queue.rs  mod.rs  pause.rs  play.rs  queue.rs  resume.rs  skip.rs  stop.rs
src/db/: track.rs
