[package]
name = "djheuel"
version = "0.1.0"
authors = ["Johannes Heuel <johannes.heuel@rwth-aachen.de>"]
edition = "2021"
license = "MIT"

[dependencies]
symphonia = { version = "0.5.2", features=["all"] }
songbird = { version = "0.4.0", features = ["driver", "gateway", "twilight", "rustls"] }
tokio = { features = ["macros", "rt-multi-thread", "signal", "sync"], version = "1" }
regex = { version = "1", features = ["unicode-case"] }
futures = "0.3"
reqwest = "0.11"
tracing = "0.1"
tracing-subscriber = "0.2"
twilight-gateway = "0.15"
twilight-http = "0.15"
twilight-model = "0.15"
twilight-standby = "0.15"
twilight-cache-inmemory = "0.15"
dotenv = "0.15.0"