[package]
name = "ohrwurm"
version = "0.1.0"
authors = ["Johannes Heuel <johannes.heuel@rwth-aachen.de>"]
edition = "2021"
license = "MIT"

[dependencies]
symphonia = { version = "0.5.2", features=["all", "opt-simd"] }
songbird = { version = "0.4.0", features = ["driver", "gateway", "twilight", "rustls", "builtin-queue"] }
tokio = { features = ["macros", "rt-multi-thread", "signal", "sync"], version = "1" }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "chrono", "migrate"] }
regex = { version = "1", features = ["unicode-case"] }
futures = "0.3"
reqwest = "0.11"
tracing = "0.1"
tracing-subscriber = "0.2"
twilight-gateway = "0.15"
twilight-http = "0.15"
twilight-model = "0.15"
twilight-standby = "0.15"
twilight-cache-inmemory = "0.15"
twilight-util = { version = "0.15", features=["builder"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.1"
anyhow = "1.0.86"
dashmap = "5.5.3"
async-trait = "0.1.80"
uuid = "1.8.0"
chrono = "0.4.38"
